etcd/etcd-netpol-global-worker.yaml
apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: etcd-access-non-master
spec:
  selector: !has(role) #"role != 'master'" # Should match the HostEndpoint labels
  order: 1
  ingress:
  - action: Deny
    protocol: TCP
    destination:
      ports: [2379, 2380]
  - action: Allow
    protocol: ICMP
  - action: Allow
    protocol: TCP
    destination:
      ports: [10250]
  - action: Deny
    protocol: TCP
    destination:
      ports: [80]
  egress:
  - action: Allow
    protocol: TCP
    destination:
      nets:
      - "192.168.56.0/24"
      ports: [10250]
